# DevOps-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: linting.yaml  pre-commit-update.yaml  tests.yaml
Cookiecutter/: requirements.txt  tasks.py
Cookiecutter/.devcontainer/: devcontainer.json
Cookiecutter/data/processed/: train_images.pt.dvc
Cookiecutter/dockerfiles/: api.dockerfile  train.dockerfile
Cookiecutter/docs/: mkdocs.yaml
Cookiecutter/docs/source/: index.md
Cookiecutter/models/: model.pth
data/: raw.dvc
src/cookiecutter/: train.py
tests/: test_data.py
