[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter"
version = "0.0.1"
description = "This is a project for cookiecutter"
authors = [
  { name = "SergioMonzon", email = "sergiomonzongarces@gmail.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
